# open_manipulator_korean_description

open_manipulator/: CMakeLists.txt  package.xml
open_manipulator_bringup/: package.xml  setup.py
open_manipulator_bringup/config/omx_f/: hardware_controller_manager.yaml  initial_positions.yaml
open_manipulator_bringup/launch/: camera_realsense.launch.py
open_manipulator_description/urdf/omx_f/: omx_f.urdf.xacro  omx_f_arm.urdf.xacro
open_manipulator_moveit_config/launch/: omx_f_moveit.launch.py
ros2_controller/om_joint_trajectory_command_broadcaster/src/: joint_trajectory_command_broadcaster.cpp
